fixed issues reported by FindBugs